--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f8f8f8;
+}
+h1{
+	text-align: center;
+}
+p{
+	color: #777777;
+}
+img{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
+button{
+	background-color: #2ecc71;
+	color: white;
+	border: 0px;
+	width: 100vw;
+	padding: 10px;
+	font-weight: 900;
+}
+
