--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,13 @@ img{
 	margin-right: auto;
 	width: 50%;
 }
-button{
+.button{
 	background-color: #2ecc71;
 	color: white;
 	border: 0px;
 	width: 100vw;
 	padding: 10px;
 	font-weight: 900;
+	text-align: center;
 }
 
